[package]
name = "arrows"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnetwork = "0.18.0"
log = "0.4.14"
env_logger = "0.9.0"
libc = "0.2.99"
pnet = "0.28.0"
pnet_macros_support = "*"
pnet_macros = "*"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.7"
chrono = "0.4"
arrow-flight = "5.2.0"
arrow = "5.2.0"
tonic = "0.5"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
datafusion = "5.0.0"
