[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-flight = "5.0"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.5"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
